--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -1,8 +1,6 @@
-name: Update README
-
 on:
   schedule:
-    - cron: "* */12 * * *"
+    - cron: '0 */12 * * *'  # cada 12 horas a la hora en punto
   workflow_dispatch:
 
 jobs:
@@ -11,8 +9,8 @@ jobs:
     name: Update Profile README
 
     steps:
-      - uses: actions/checkout@v2.3.4
-      
+      - uses: actions/checkout@v2
+
       - uses: Readme-Workflows/recent-activity@v2.4.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
