--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -12,5 +12,5 @@ jobs:
       - uses: actions/checkout@v2
 
       - uses: Readme-Workflows/recent-activity@v2.4.1
-        with:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
