--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -13,4 +13,4 @@ jobs:
 
       - uses: Readme-Workflows/recent-activity@v2.4.1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TOKEN_GITHUB: ${{ secrets.TOKEN_GITHUB }}
