--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -4,13 +4,11 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  update:
+    name: Update README with recent activity
     runs-on: ubuntu-latest
-    name: Update Profile README
-
+    
     steps:
-      - uses: actions/checkout@v2
-
-      - uses: Readme-Workflows/recent-activity@v2.4.1
-        env:
+      - uses: Readme-Workflows/recent-activity@main
+        with:
           TOKEN_GITHUB: ${{ secrets.TOKEN_GITHUB }}
